WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259608
AX: display:contents elements are sometimes missing their children
https://bugs.webkit.org/show_bug.cgi?id=259608
Summary
AX: display:contents elements are sometimes missing their children
Tyler Wilcock
Reported
2023-07-28 11:37:04 PDT
...
Attachments
Patch
(18.16 KB, patch)
2023-07-28 11:40 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(21.13 KB, patch)
2023-07-28 13:27 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-28 11:37:16 PDT
<
rdar://problem/113044333
>
Tyler Wilcock
Comment 2
2023-07-28 11:40:08 PDT
Created
attachment 467150
[details]
Patch
Tyler Wilcock
Comment 3
2023-07-28 13:27:35 PDT
Created
attachment 467152
[details]
Patch
EWS
Comment 4
2023-07-28 16:12:22 PDT
Committed
266407@main
(45ff67ff20ee): <
https://commits.webkit.org/266407@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467152
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug